@@ -1,6 +1,8 @@
 caputils-0.7.3
 --------------
 
+* Renamed {create,open,close}stream to stream_{create,open,close}
+* Fixed capdump.
 * More man-pages.
 * stream_read takes cap_head pointer instead of char-buffer.
 * Fixing compability issues with linux-2.4
